# lox

./: AST.cpp  AST.h  CMakeLists.txt  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Makefile  Parser.cpp  Parser.h  Prelude.cpp  Prelude.h  README.md  Scanner.cpp  Scanner.h  TestInterpreter.cpp  TestLexer.cpp  TestParser.cpp  TestRunner.cpp  TestScanner.cpp  TestUtils.cpp  Utils.cpp  Utils.h  grammar.md  main.cpp  scanner.cpp  scanner.h
src/: AST.cpp  AST.h  CMakeLists.txt  Checker.cpp  Checker.h  Interpreter.cpp  Interpreter.h  Parser.cpp  Parser.h  Prelude.cpp  Utils.cpp  Utils.h  main.cpp
tests/: CMakeLists.txt  TestRunner.cpp
tests/interpreter/: and-expression-bad-types.stderr  and-expression-bad-types2.lox  and-expression-bad-types2.stderr  assert-statement-expression-error.lox  assert-statement-expression-error.stderr  assert-statement-expression-not-boolean.stderr  assert-statement-fails.stderr  assert-statement-triggers.stderr  assign-statement-expression-error.lox  assign-statement-expression-error.stderr  assign-statement-identifier-error.stderr  assign-statement.lox  binary-expression-add-bad-types.lox  binary-expression-add-bad-types.stderr  binary-expression-divide-bad-types.lox  binary-expression-divide-bad-types.stderr  binary-expression-equal-bad-types.lox  binary-expression-equal-bad-types.stderr  binary-expression-greater-bad-types.lox  binary-expression-greater-bad-types.stderr  binary-expression-greater-equal-bad-types.lox  binary-expression-greater-equal-bad-types.stderr  binary-expression-less-bad-types.lox  binary-expression-less-bad-types.stderr  binary-expression-less-equal-bad-types.lox  binary-expression-less-equal-bad-types.stderr  binary-expression-modulo-bad-types.lox  binary-expression-modulo-bad-types.stderr  binary-expression-multiply-bad-types.lox  binary-expression-multiply-bad-types.stderr  binary-expression-not-equal-bad-types.lox  binary-expression-not-equal-bad-types.stderr  binary-expression-subtract-bad-types.lox  binary-expression-subtract-bad-types.stderr  binary-expression.lox  block-statement-inner-error.lox  block-statement-inner-error.stderr  block-statement.lox  break-statement.lox  call-expression-arg-error.lox  (+72 more)
tests/lexer/: comments.lox  comments.stdout  identifiers.lox  identifiers.stdout  invalid-token.stderr  keywords.lox  keywords.stdout  number-exceeds-range.lox  number-exceeds-range.stderr  numbers.lox  numbers.stdout  one-char-tokens.lox  one-char-tokens.stdout  one-two-char-tokens.stdout  skip-whitespace.lox  skip-whitespace.stdout  string-has-unknown-escape-sequence.lox  string-has-unknown-escape-sequence.stderr  string-is-not-terminated.stderr  (+2 more)
(+134 files in other folders)
